@@ -84,7 +84,7 @@ class StyleComboBox(gtk.ComboBox):
         active = self.get_active()
         if active < 0:
             return None
-        key = self.store[active][0]
+        key = unicode(self.store[active][0])
         if key == _('default'):
             key = "default"
         return (key,self.style_map[key])
